修复跳一跳格子不限时问题，修复公众号二维码失效问题

--- a/web-mobile/index.html
+++ b/web-mobile/index.html
@@ -47,8 +47,8 @@
       <span style="width: 0%"></span>
     </div>
   </div>
-<script src="src/settings.b9ba1.js" charset="utf-8"></script>
+<script src="src/settings.aae35.js" charset="utf-8"></script>
 <%=eruda%>
-<script src="main.5a1c3.js" charset="utf-8"></script>
+<script src="main.5b376.js" charset="utf-8"></script>
 </body>
 </html>
