--- a/web-desktop/index.html
+++ b/web-desktop/index.html
@@ -32,7 +32,7 @@
 
 <p class="footer"><a href="https://github.com/potato47/so-many-games" title="github">Github</a></p>
 
-<script src="src/settings.d8a26.js" charset="utf-8"></script>
-<script src="main.b2765.js" charset="utf-8"></script>
+<script src="src/settings.037df.js" charset="utf-8"></script>
+<script src="main.89f25.js" charset="utf-8"></script>
 </body>
 </html>
