修复死后可以连跳bug

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -49,6 +49,6 @@
   </div>
 <script src="src/settings.aae35.js" charset="utf-8"></script>
 <%=eruda%>
-<script src="main.5b376.js" charset="utf-8"></script>
+<script src="main.9209f.js" charset="utf-8"></script>
 </body>
 </html>
