--- a/desktop/index.html
+++ b/desktop/index.html
@@ -33,6 +33,6 @@
 <p class="footer"><a href="https://github.com/potato47/so-many-games" title="github">Github</a></p>
 
 <script src="src/settings.037df.js" charset="utf-8"></script>
-<script src="main.89f25.js" charset="utf-8"></script>
+<script src="main.ae7e8.js" charset="utf-8"></script>
 </body>
 </html>
